--- a/index-cpy.html
+++ b/index-cpy.html
@@ -28,7 +28,7 @@
           </div>
           <button id="login"> <a href="index.html"> login </a></button>
           <div id="signup">Don't have an Account?
-            <a href="">Sign up</a>
+            <a href="">Sign in please!!</a>
           </div>
         </form>
       </div>
